=======
CHANGES
=======

0.7.1 (unreleased)
------------------

- Nothing changed yet.


0.7.0 (2009-12-29)
------------------

- Allow to initialze the column definitions without requiring an
  entire table update.

- Fixed tests, so they no longer use ``zope.app.container`` (which was
  even not declared as test dependency).

- Head cell contents are now translated.

0.6.1 (2009-02-22)
------------------

- Be smart to not ``IPhysicallyLocatable`` objects if we lookup the
  ``__name__`` value in columns.


0.6.0 (2008-11-12)
------------------

- Bugfix: Allow to switch the sort order on the header link. This was
  blocked to descending after the first click

- Bugfix: CheckBoxColumn, ensure that we allways use a list for compare
  selected items. It was possible that if only one item get selected
  we compared a string. If this string was a sub string of another existing
  item the other item get selected too.

- Moved advanced batching implementation into z3c.batching

- Implemented GetAttrFormatterColumn. This column can be used for simple
  value formatting columns.

- Bad typo in columns.py: Renamed ``getLinkConent`` to ``getLinkContent``

- Bug: Changed return string in getLinkCSS. It was using css="" instead of
  class="" for CSS classes. Thanks to Dan for reporting this bugs.

- Implemented SelectedItemColumn

- Fix CheckBoxColumn, use always the correct selectedItems. Use always real
  selectedItems form the table

- Fix RadioColumn, use always the correct selectedItem from the selectedItems
  list. Use always the first selectedItems form the tables selectedItems


0.5.0 (2008-04-13)
------------------

- Initial Release.